--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <div class="container">
-    <a class="navbar-brand" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-primary">
+  <a class="navbar-brand" rel="author" href="index"><img src="assets/images/icon/favicon.ico" alt="Nótt Gaming" width="48" height="48"></a>
 
+  <div class="container">
     {%- assign page_paths = site.header_pages -%}
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,16 +9,12 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
-        {%- for path in page_paths -%}
-          {%- assign my_page = site.pages | where: "path", path | first -%}
-          {%- if my_page.title -%}
-          <li class="nav-item">
-            <a class="nav-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-          </li>
-          {%- endif -%}
-        {% endfor -%}
         <li class="nav-item">
-          <a class="nav-link" href="{{ site.github.repository_url }}">Fork me on Github</a>
+          <a class="nav-link" href="https://nott-gaming.github.io/mentalbreakdown">Mental Breakdown</a>
+          <a class="nav-link" href="https://nott-gaming.github.io/licensing">Licensing</a>
+          <a class="nav-link" href="https://nott-gaming.github.io/aboutus">About us</a>
+          <a class="nav-link" href="https://nott-gaming.github.io/contact">Contact</a>
+          <a class="nav-link" href="https://nott-gaming.github.io/archive">Blog Archive</a>
         </li>
       </ul>
     </div>
