UPDATED: Web page renewed

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand" rel="author" href="index"><img src="assets/images/icon/favicon.ico" alt="Nótt Gaming" width="48" height="48"></a>
+  <a class="navbar-brand" rel="author" href="index"><img src="https://nott-gaming.github.io/assets/images/icon/favicon.ico" alt="Nótt Gaming" width="48" height="48"></a>
 
   <div class="container">
     {%- assign page_paths = site.header_pages -%}
