--- a/_sass/_bootstrap_customization.scss
+++ b/_sass/_bootstrap_customization.scss
@@ -70,8 +70,8 @@ $web-font-path: "https://fonts.googleapis.com/css?family=Lato" !default;
 }
 
 .nav-link {
-
-  display: revert;
+    font-family: Monster-Regular;
+    display: revert;
 }
 
 // Buttons =====================================================================
