--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="https://nott-gaming.github.io/mentalbreakdown">Mental Breakdown</a>
+          <a class="nav-link" style="font-family: Monster-Regular" href="https://nott-gaming.github.io/mentalbreakdown">Mental Breakdown</a>
           <a class="nav-link" href="https://nott-gaming.github.io/licensing">Licensing</a>
           <a class="nav-link" href="https://nott-gaming.github.io/aboutus">About us</a>
           <a class="nav-link" href="https://nott-gaming.github.io/contact">Contact</a>
