--- a/_sass/_bootstrap_customization.scss
+++ b/_sass/_bootstrap_customization.scss
@@ -132,6 +132,26 @@ $web-font-path: "https://fonts.googleapis.com/css?family=Lato" !default;
 
 // Typography ==================================================================
 
+body {
+  font-weight: 200;
+  letter-spacing: 1px;
+  font-size: 0.75rem;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-transform: uppercase;
+  letter-spacing: 3px;
+}
+
+.text-secondary {
+  color: $body-color !important;
+}
+
 // Tables ======================================================================
 
 .table {
