--- a/_sass/_bootstrap_customization.scss
+++ b/_sass/_bootstrap_customization.scss
@@ -141,13 +141,18 @@ body {
 }
 
 h1,
-h2,
-h3,
 h4,
 h5,
 h6 {
   text-transform: uppercase;
   letter-spacing: 3px;
+}
+
+h2 {
+    font-size: 2rem;
+}
+h3 {
+    font-size: 1.2rem;
 }
 
 .text-secondary {
