--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,6 +16,7 @@
               </a>
             </li>
           {%- endif -%}
+          <li>Follow us on Twitter!</li>
           <li><a href="https://twitter.com/thenottgaming?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @thenottgaming</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></li>
         </ul>
       </div>
