UPDATED: Adding copyright

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,7 +29,7 @@
           <a href="https://nicolas-van.github.io/bootstrap-4-github-pages/">Powered by Bootstrap 4 Github Pages</a>
         </p>
         <p>
-          <a href="https://github.com/nicolas-van/bootstrap-4-github-pages"><img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/nicolas-van/bootstrap-4-github-pages?style=social"></a>
+          © 2022 Nótt Gaming. All Rights Reserved.
         <p>
       </div>
 
