--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,3 +25,13 @@
   <!-- end highlight.js support -->
 
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2C42NC10MM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2C42NC10MM');
+</script>
